...
private const val PROFILE = "_profile"
private const val LIST = "_list"

// Private object containing UI actions
private object A {
  const val NEW = "new"
  const val EDIT = "edit"
  const val DELETE = "delete"
  const val CONFIRM = "confirm"
  const val CANCEL = "cancel"
  const val NEXT = "next"
  const val BACK = "back"
}
...
      const val divider = BOOK + LIST + UI_T.DIVIDER
    }

    object BookEntryComp {
      // Parent container
      const val entries_list_book_container = "entries_list_book" + UI_T.CONTAINER
      const val scrollable = "scrollable" + UI_T.SCROLLABLE_CONTAINER
      // Fields
      const val title_field = "title" + UI_T.TEXT_FIELD
      const val genre_field = "genres" + UI_T.DROPDOWN
      const val author_field = "author" + UI_T.TEXT_FIELD
      const val description_field = "description" + UI_T.TEXT_FIELD
      const val rating_field = "rating" + UI_T.TEXT_FIELD
      const val isbn_field = "isbn" + UI_T.TEXT_FIELD
      const val photo_field = "photo" + UI_T.IMAGE_FIELD
      const val language_field = "language" + UI_T.DROPDOWN

      // Dropdown menus
      const val genre_menu = "genre_menu" + UI_T.SCROLLABLE_CONTAINER
      const val genre_menu_item = "genre_menu_item" + UI_T.CONTAINER
      const val language_menu = "language_menu" + UI_T.SCROLLABLE_CONTAINER
      const val language_menu_item = "language_menu_item" + UI_T.CONTAINER
...
      const val rating_star_empty = "rating_star_empty" + UI_T.ICON
    }

    // BookDisplayComponent specific tags (BookDisplayComponent.kt)
    object BookDisplayComp {
      const val book_display_container = BOOK + UI_T.CONTAINER
      const val image = BOOK + UI_T.IMAGE
      const val image_picture = BOOK + "_image_picture" + UI_T.IMAGE
      const val image_gray_box = BOOK + "_image_gray_box" + UI_T.IMAGE
      const val middle_container = BOOK + "_middle" + UI_T.CONTAINER
      const val right_container = BOOK + "_right" + UI_T.CONTAINER
      const val title = BOOK + "_title" + UI_T.TEXT
      const val author = BOOK + "_author" + UI_T.TEXT
...
    // Book Profile Screen specific tags (BookProfile.kt)
    object BookProfile {
      const val scrollable = Screen.BOOK_PROFILE + UI_T.SCROLLABLE_CONTAINER
      const val title = BOOK + "_title" + UI_T.TEXT
      const val author = BOOK + "_author" + UI_T.TEXT
      const val rating = BOOK + "_rating" + UI_T.TEXT
      const val synopsis_label = BOOK + "_synopsis" + UI_T.LABEL
      const val synopsis = BOOK + "_synopsis" + UI_T.TEXT
      const val language = BOOK + "_language" + UI_T.TEXT
      const val genres = BOOK + "_genres" + UI_T.LABEL
      const val genre = "_genre" + UI_T.TEXT
      const val isbn = BOOK + "_isbn" + UI_T.TEXT
      const val date = BOOK + "_date" + UI_T.TEXT
      const val imagePlaceholder = BOOK + "_placeholder" + UI_T.IMAGE
      const val image = BOOK + UI_T.IMAGE
      const val volume = BOOK + "_volume" + UI_T.TEXT
      const val issue = BOOK + "_issue" + UI_T.TEXT
      const val editorial = BOOK + "_editorial" + UI_T.TEXT
      const val location = BOOK + "_location" + UI_T.TEXT
      const val edit = BOOK + A.EDIT + UI_T.BUTTON
      const val scrollable_end = S.BOOK_PROFILE + UI_T.DIVIDER
    }

    // SignIn Screen specific tags (SignIn.kt)
    object SignIn {
...
      const val author = "author " + UI_T.TEXT_FIELD
      const val synopsis = "description " + UI_T.TEXT_FIELD
      const val rating = "rating " + UI_T.TEXT_FIELD
      const val isbn = "isbn " + UI_T.TEXT_FIELD
      const val photo = "photo" + UI_T.IMAGE_FIELD
      const val language = BOOK + "_language" + UI_T.FIELD
      const val save = A.CONFIRM + UI_T.BUTTON
    }

    // Edit Book Screen specific tags (EditBookScreen.kt)
    object EditBook {
      const val scrollable = Screen.EDIT_BOOK + UI_T.SCROLLABLE_CONTAINER
      const val title = BOOK + "_title" + UI_T.TEXT_FIELD
...
  }
}

object Enums {

  object Languages {
    const val FRENCH = "French"
    const val GERMAN = "German"
    const val ENGLISH = "English"
    const val SPANISH = "Spanish"
    const val ITALIAN = "Italian"
    const val ROMANSH = "Romansh"
    const val OTHER = "Other"
...
